--- a/trunk/FPGA_LE/DE0_Default.qsf
+++ b/trunk/FPGA_LE/DE0_Default.qsf
@@ -921,4 +921,5 @@ set_instance_assignment -name TPD_REQUIREMENT "2 ns" -from "RandomSeq:inst8|*" -
 set_instance_assignment -name TPD_REQUIREMENT "2 ns" -from * -to "RandomSeq:inst8|*"
 set_instance_assignment -name TH_REQUIREMENT "2 ns" -from "RandomSeq:inst8|*" -to *
 set_instance_assignment -name TH_REQUIREMENT "2 ns" -from * -to "RandomSeq:inst8|*"
+set_location_assignment PIN_H6 -to sw2
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
